# bare-test-template

./: Cargo.toml  README.md  bare-test.toml
.github/workflows/: ci.yml
src/: igb.rs  lib.rs
tests/: test.rs
