[package]
edition = "2024"
name = "project-name"
version = "0.1.0"

[dependencies]
mbarrier = "0.1"
dma-api = { version = "0.3", features = ["alloc"] }
log = "0.4"
bit_field = "0.10.2"
tock-registers = "0.10.0"
crab-usb = "0.1.4"
spin = {version = "0.10"}
futures = {version = "0.3", features = ["alloc"], default-features = false}


[dev-dependencies]
bare-test = "0.4"
pcie = "0.3"
spin_on = "0.1.1"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
